--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,11 @@
+@import '@fontsource/maple-mono';
+@import '@fontsource/maple-mono/200.css';
+@import '@fontsource/maple-mono/300.css';
+@import '@fontsource/maple-mono/400.css';
+@import '@fontsource/maple-mono/500.css';
+@import '@fontsource/maple-mono/600.css';
+@import '@fontsource/maple-mono/700.css';
+
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import './prism.css';
